--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>PeBlog</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="fragment" content="!">
 
     {{content-for 'head'}}
 
